--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 							consequat.</p>
 					</li>
 					<li>
-						<span class="icon major style5 fa-gem"></span>
+						<img src="images/aushadhi.png" class="icon major style5" alt=""
+							style="width: 200px; height:225px">
 						<h3>AUSHADHI</h3>
 						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
 							consequat.</p>
