completed skills section

--- a/index.html
+++ b/index.html
@@ -95,46 +95,47 @@
 				</header>
 				<ul class="statistics">
 					<li class="style1">
-						<span class="icon solid fa-code-branch"></span>
-						<strong>5,120</strong> Etiam
+						<i class="fab fa-react skill-icon"></i>
+						<strong>React JS</strong>
 					</li>
 					<li class="style2">
-						<span class="icon fa-folder-open"></span>
-						<strong>8,192</strong> Magna
+						<i class="fab fa-html5 skill-icon"></i>
+						<strong>HTML5</strong>
 					</li>
 					<li class="style3">
-						<span class="icon solid fa-signal"></span>
-						<strong>2,048</strong> Tempus
+						<i class="fab fa-css3-alt skill-icon"></i>
+						<strong>CSS3</strong>
 					</li>
 					<li class="style4">
-						<span class="icon solid fa-laptop"></span>
-						<strong>4,096</strong> Aliquam
+						<i class="fab fa-js skill-icon"></i>
+						<strong>JavaScript </strong>
 					</li>
 					<li class="style5">
-						<span class="icon fa-gem"></span>
-						<strong>1,024</strong> Nullam
+						<i class="fab fa-python skill-icon"></i>
+						<strong>Python</strong>
 					</li>
 				</ul>
 				<ul class="statistics">
 					<li class="style1">
-						<span class="icon solid fa-code-branch"></span>
-						<strong>5,120</strong> Etiam
+						<i class="fab fa-node-js skill-icon"></i>
+						<strong>Node JS</strong>
 					</li>
+
 					<li class="style2">
-						<span class="icon fa-folder-open"></span>
-						<strong>8,192</strong> Magna
+						<i class="fab fa-python skill-icon"></i>
+						<strong>Django</strong>
 					</li>
 					<li class="style3">
-						<span class="icon solid fa-signal"></span>
-						<strong>2,048</strong> Tempus
+						<i class="fab fa-envira skill-icon mongo-icon"></i>
+						<strong>MongoDB</strong>
 					</li>
 					<li class="style4">
-						<span class="icon solid fa-laptop"></span>
-						<strong>4,096</strong> Aliquam
+						<i class="fas fa-database skill-icon"></i>
+						<strong>MySQL</strong>
 					</li>
 					<li class="style5">
-						<span class="icon fa-gem"></span>
-						<strong>1,024</strong> Nullam
+						<i class="fab fa-git-alt skill-icon"></i>
+						<strong>Git</strong>
 					</li>
 				</ul>
 
