completed skills section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 						<img src="images/aushadhi.png" class="icon major style5" alt=""
 							style="width: 200px; height:225px">
 						<h3>AUSHADHI</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>A E commerce web application for Ayurvedic products. <br> Built using NodeJS</p>
 					</li>
 				</ul>
 				<footer class="major">
