completed projects section

--- a/index.html
+++ b/index.html
@@ -61,29 +61,38 @@
 				</header>
 				<ul class="features">
 					<li>
-						<span class="icon solid major style1 fa-code"></span>
+						<img src="images/task-manager.png" class="icon major style5" alt=""
+							style="width: 300px; height:225px">
 						<h3>Task Manager Application</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Simple task manager application to schedule daily tasks. <br> Built using MERN stack
+							(MongoDB,
+							ExpressJS, ReactJS,NodeJS ).</p>
 					</li>
 					<li>
-						<span class="icon major style3 fa-copy"></span>
+						<img src="images/job-portal.png" class="icon major style5" alt=""
+							style="width: 300px; height:225px">
 						<h3>Job Portal</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
+						<p>Job Portal platform for connecting job seekers and companies.
+							<br> Built sing NodeJS.
+						</p>
 					</li>
 					<li>
 						<img src="images/aushadhi.png" class="icon major style5" alt=""
-							style="width: 200px; height:225px">
+							style="width: 300px; height:225px">
 						<h3>AUSHADHI</h3>
-						<p>A E commerce web application for Ayurvedic products. <br> Built using NodeJS</p>
+						<p> E-commerce web application for Ayurvedic products. <br> Built using NodeJS</p>
+
 					</li>
 				</ul>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
-				</footer>
+				<ul class="features">
+					<li><a href="https://github.com/akashraveendran/task-manager-full-stack"
+							class="button bold-text">View project</a></li>
+					<li><a href="https://github.com/akashraveendran/NodeJS-job-portal" class="button bold-text">View
+							project</a></li>
+					<li><a href="https://github.com/akashraveendran/Aushadhi" class="button bold-text">View project</a>
+					</li>
+				</ul>
+
 			</section>
 
 			<!-- Second Section -->
