--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li><a href="#intro" class="active">About Me</a></li>
 				<li><a href="#first">Projects</a></li>
 				<li><a href="#second">Skills</a></li>
-				<li><a href="#cta">Get Started</a></li>
+				<li><a href="#cta">Last Section</a></li>
 			</ul>
 		</nav>
 
@@ -153,16 +153,15 @@
 			<!-- Get Started -->
 			<section id="cta" class="main special">
 				<header class="major">
-					<h2>Congue imperdiet</h2>
-					<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-						posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+					<h2>last Section</h2>
+					<p>Thanks for Visiting</p>
 				</header>
-				<footer class="major">
+				<!-- <footer class="major">
 					<ul class="actions special">
 						<li><a href="generic.html" class="button primary">Get Started</a></li>
 						<li><a href="generic.html" class="button">Learn More</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 			</section>
 
 		</div>
@@ -182,13 +181,18 @@
 					<dt>Phone</dt>
 					<dd>+91 7356675089</dd>
 					<dt>Email</dt>
-					<dd><a href="#">akashraveendran1611@gmail.com</a></dd>
+					<dd><a href="mailto:akashraveendran1611@gmail.com">akashraveendran1611@gmail.com</a>
+					</dd>
 				</dl>
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+					<li><a href="https://twitter.com/0805AkashR" class="icon brands fa-twitter alt"
+							target="_blank"><span class="label">Twitter</span></a></li>
+
+					<li><a href="https://www.linkedin.com/in/akash-raveendran-633884239"
+							class="icon brands fa-linkedin alt" target="_blank"><span class="label">Linkedin </span></a>
+					</li>
+					<li><a href="https://github.com/akashraveendran" target="_blank"
+							class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 				</ul>
 			</section>
 			<p class="copyright">&copy; Designed By Akash Raveendran</p>
