updated main heading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<header id="header" class="alt">
 			<span class="logo"><img src="images/logo.jpg" alt="" width="100px" style="border-radius: 10px;" /></span>
 			<h1>Akash Raveendran</h1>
-			<p>Fullstack web DEV
+			<p>Fullstack web DEVELOPER
 			</p>
 		</header>
 
